--- a/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/find-window-coordenates-of-the-field.html
@@ -92,6 +92,8 @@
         fieldCoords.top + field.clientTop
       );
 
+      // Este so funciona para este caso porque as bordas sao iguais. Por
+      // isso a solucao nao eh generica como o exercicio pede.
       console.log(
         fieldCoords.right - field.clientLeft,
         fieldCoords.bottom - field.clientTop
