--- a/part-2-browser-document-events-interfaces/document/resume/tasks/show-a-note-near-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/show-a-note-near-the-element.html
@@ -9,6 +9,7 @@
         padding: 0.5em 10px;
         quotes: "\201C""\201D""\2018""\2019";
         display: inline-block;
+        width: 390px;
       }
 
       blockquote::before {
@@ -40,12 +41,10 @@
     </p>
 
     <blockquote>
-      Teacher: Why are you late?
-      <br />
-      Student: There was a man who lost a hundred dollar bill.
-      <br />
-      Teacher: That's nice. Were you helping him look for it?
-      <br />Student: No. I was standing on it.
+      <div>Teacher: Why are you late?</div>
+      <div>Student: There was a man who lost a hundred dollar bill.</div>
+      <div>Teacher: That's nice. Were you helping him look for it?</div>
+      Student: No. I was standing on it.
     </blockquote>
 
     <p>
