--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <head>
+    <style>
+      .alert {
+        padding: 5px;
+        border: 1px solid #d6e9c6;
+        border-radius: 4px;
+        color: #3c763d;
+        background-color: #dff0d8;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="alert">
+      <strong>Hi there</strong>
+    </div>
+  </body>
 </html>
