--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="alert">
-      <strong>Hi there</strong>
+      <strong>Hi there</strong> You've read an important message.
     </div>
   </body>
 </html>
