--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -12,8 +12,19 @@
     </style>
   </head>
   <body>
-    <div class="alert">
+    <!-- <div class="alert">
       <strong>Hi there</strong> You've read an important message.
-    </div>
+    </div> -->
+
+    <script>
+      // 1. Create <div> element
+      const div = document.createElement("div");
+      // 2. Set its class to "alert"
+      div.className = "alert";
+      // 3. Fill it with the content
+      div.innerHTML =
+        "<strong>Hi there</strong> You've read an important message.";
+      document.body.append(div);
+    </script>
   </body>
 </html>
