--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -27,13 +27,13 @@
       document.body.append(div);
     </script> -->
 
-    <ul id="ul">
+    <!-- <ul id="ul">
       <li>0</li>
       <li>1</li>
       <li>2</li>
-    </ul>
+    </ul> -->
 
-    <script>
+    <!-- <script>
       const ul = document.querySelector("ul");
 
       ul.before("before");
@@ -52,6 +52,17 @@
       newNode.innerHTML = "Replaced";
 
       ul.replaceWith(newNode);
+    </script> -->
+
+    <div
+      id="div"
+      class="alert"
+    ></div>
+
+    <script>
+      const div = document.querySelector("#div");
+
+      div.append("<b>Hello</b>", document.createElement("hr"));
     </script>
   </body>
 </html>
