--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -69,7 +69,9 @@
 
     <script>
       const div = document.querySelector("#div");
-      div.insertAdjacentHTML("beforebegin", "<b>Hello</b>");
+      div.className = "alert";
+      div.insertAdjacentHTML("beforebegin", "<b>Before begin</b>");
+      div.insertAdjacentHTML("afterend", "<b>After end</b>");
       console.log(div);
     </script>
   </body>
