--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -71,6 +71,7 @@
       const div = document.querySelector("#div");
       div.className = "alert";
       div.insertAdjacentHTML("beforebegin", "<b>Before begin</b>");
+      div.insertAdjacentHTML("afterbegin", "<b>After begin</b>");
       div.insertAdjacentHTML("afterend", "<b>After end</b>");
       console.log(div);
     </script>
