Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -72,8 +72,8 @@
       div.className = "alert";
       div.insertAdjacentHTML("beforebegin", "<b>Before begin</b>");
       div.insertAdjacentHTML("afterbegin", "<b>After begin</b>");
+      div.insertAdjacentHTML("beforeend", "<div><b>Before end</b></div>");
       div.insertAdjacentHTML("afterend", "<b>After end</b>");
-      console.log(div);
     </script>
   </body>
 </html>
