Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -65,7 +65,7 @@
       div.append("<b>Hello</b>", document.createElement("hr"));
     </script> -->
 
-    <div id="div"></div>
+    <!-- <div id="div"></div>
 
     <script>
       const div = document.querySelector("#div");
@@ -74,6 +74,17 @@
       div.insertAdjacentHTML("afterbegin", "<b>After begin</b>");
       div.insertAdjacentHTML("beforeend", "<div><b>Before end</b></div>");
       div.insertAdjacentHTML("afterend", "<b>After end</b>");
+    </script> -->
+
+    <ul>
+      <li>0</li>
+      <li>1</li>
+      <li>2</li>
+    </ul>
+
+    <script>
+      const ul = document.querySelector("ul");
+      console.log(ul);
     </script>
   </body>
 </html>
