Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -84,6 +84,7 @@
 
     <script>
       const ul = document.querySelector("ul");
+      ul.insertAdjacentHTML("beforebegin", "<b>Before begin</b>");
       console.log(ul);
     </script>
   </body>
