--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -76,13 +76,13 @@
       div.insertAdjacentHTML("afterend", "<b>After end</b>");
     </script> -->
 
-    <ul>
+    <!-- <ul>
       <li>0</li>
       <li>1</li>
       <li>2</li>
-    </ul>
+    </ul> -->
 
-    <script>
+    <!-- <script>
       const ul = document.querySelector("ul");
 
       ul.insertAdjacentHTML("beforebegin", "<b>Before begin</b>");
@@ -96,6 +96,6 @@
       div.className = "alert";
       div.innerHTML = "Finalmente terminamos!";
       document.body.insertAdjacentElement("afterend", div);
-    </script>
+    </script> -->
   </body>
 </html>
