--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -97,5 +97,12 @@
       div.innerHTML = "Finalmente terminamos!";
       document.body.insertAdjacentElement("afterend", div);
     </script> -->
+
+    <script>
+      document.body.insertAdjacentHTML(
+        "afterbegin",
+        "<div class='alert'><b>Hi there!</b> You've read an important message.</div>"
+      );
+    </script>
   </body>
 </html>
