--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -98,11 +98,21 @@
       document.body.insertAdjacentElement("afterend", div);
     </script> -->
 
-    <script>
+    <!-- <script>
       document.body.insertAdjacentHTML(
         "afterbegin",
         "<div class='alert'><b>Hi there!</b> You've read an important message.</div>"
       );
+    </script> -->
+
+    <script>
+      const div = document.createElement("div");
+      div.className = "alert";
+      div.innerHTML = "<b>Hi there!</b> You've read an important message!";
+      document.body.append(div);
+      setTimeout(function () {
+        div.remove();
+      }, 5000);
     </script>
   </body>
 </html>
