Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -121,7 +121,7 @@
     <script>
       const first = document.querySelector("#first");
       const second = document.querySelector("#second");
-      console.log(first, second);
+      second.after(first);
     </script>
   </body>
 </html>
