Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -8,6 +8,7 @@
         border-radius: 4px;
         color: #3c763d;
         background-color: #dff0d8;
+        margin-bottom: 20px;
       }
     </style>
   </head>
@@ -115,7 +116,7 @@
       }, 5000);
     </script> -->
 
-    <div id="first">First</div>
+    <!-- <div id="first">First</div>
     <div id="second">Second</div>
 
     <script>
@@ -124,6 +125,6 @@
 
       second.insertAdjacentElement("afterend", first);
       // second.after(first);
-    </script>
+    </script> -->
   </body>
 </html>
