Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -163,9 +163,9 @@
       ul.append(getListContent());
     </script> -->
 
-    <ul id="ul"></ul>
+    <!-- <ul id="ul"></ul> -->
 
-    <script>
+    <!-- <script>
       const ul = document.querySelector("ul");
       function getListContent() {
         const result = [];
@@ -180,6 +180,6 @@
       }
 
       ul.append(...getListContent());
-    </script>
+    </script> -->
   </body>
 </html>
