Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -181,5 +181,10 @@
 
       ul.append(...getListContent());
     </script> -->
+
+    <script>
+      const node = document.body.append("Ola");
+      console.log(node);
+    </script>
   </body>
 </html>
