--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -187,13 +187,13 @@
       console.log(node);
     </script> -->
 
-    <ul>
+    <!-- <ul>
       <li>0</li>
       <li>1</li>
       <li>2</li>
-    </ul>
+    </ul> -->
 
-    <script>
+    <!-- <script>
       const ul = document.querySelector("ul");
       const lastLi = document.createElement("li");
       const firstLi = document.createElement("li");
@@ -207,6 +207,14 @@
       ul.replaceChild(secondLi, ul.children[1]);
       const removedNode = ul.removeChild(ul.children[2]);
       console.log(removedNode);
+    </script> -->
+
+    <p>Somewhere in the page...</p>
+
+    <script>
+      document.write("<b>Hello from JS</b>");
     </script>
+
+    <p>The end.</p>
   </body>
 </html>
