--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -217,12 +217,26 @@
 
     <p>The end.</p> -->
 
-    <p>After five seconds the contents of this page will be replaced...</p>
+    <!-- <p>After five seconds the contents of this page will be replaced...</p>
 
     <script>
       setTimeout(function () {
         document.write("<b>...By this.</b>");
       }, 5000);
+    </script> -->
+
+    <p>Somewhere in the page...</p>
+
+    <script>
+      const list = [];
+
+      for (let i = 0; i < 5; i++) {
+        list.push(`<li>${i}</li>`);
+      }
+
+      document.write(`<ul>${list}</ul>`);
     </script>
+
+    <p>The end.</p>
   </body>
 </html>
