Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
+++ b/part-2-browser-document-events-interfaces/document/resume/modifying-the-document.html
@@ -235,6 +235,7 @@
       }
 
       document.write(`<ul>${list}</ul>`);
+      document.write(document.createElement("hr").outerHTML);
     </script>
 
     <p>The end.</p>
