Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
@@ -8,9 +8,10 @@
     <script>
       const ul = document.querySelector("ul");
 
+      // This won't work
       function clear(elem) {
         for (let i = 0; i < elem.childNodes.length; i++) {
-          console.log(elem.childNodes[i]);
+          elem.childNodes[i].remove();
         }
       }
 
