Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
@@ -10,10 +10,17 @@
 
       // This won't work
       function clear(elem) {
-        for (let i = 0; i < elem.childNodes.length; i++) {
-          elem.childNodes[i].remove();
+        for (const node of elem.childNodes) {
+          node.remove();
         }
       }
+
+      // This won't work
+      // function clear(elem) {
+      //   for (let i = 0; i < elem.childNodes.length; i++) {
+      //     elem.childNodes[i].remove();
+      //   }
+      // }
 
       // function clear(elem) {
       //   elem.innerHTML = "";
