Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
@@ -8,12 +8,18 @@
     <script>
       const ul = document.querySelector("ul");
 
-      // This won't work
       function clear(elem) {
         for (const node of elem.childNodes) {
-          node.remove();
+          elem.removeChild(node);
         }
       }
+
+      // This won't work
+      // function clear(elem) {
+      //   for (const node of elem.childNodes) {
+      //     node.remove();
+      //   }
+      // }
 
       // This won't work
       // function clear(elem) {
