Modifying the document

--- a/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
@@ -9,7 +9,11 @@
       const ul = document.querySelector("ul");
 
       function clear(elem) {
-        while (elem.firstChild) {
+        // while (elem.firstChild) {
+        //   elem.firstChild.remove();
+        // }
+        while (elem.hasChildNodes()) {
+          console.log(elem.firstChild);
           elem.firstChild.remove();
         }
       }
