--- a/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/clear-the-element.html
@@ -12,9 +12,14 @@
         // while (elem.firstChild) {
         //   elem.firstChild.remove();
         // }
-        while (elem.hasChildNodes()) {
-          elem.firstChild.remove();
+
+        while (elem.lastChild) {
+          elem.lastChild.remove();
         }
+
+        // while (elem.hasChildNodes()) {
+        //   elem.firstChild.remove();
+        // }
       }
 
       // function clear(elem) {
