--- a/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/resume/tasks/create-a-list.html
@@ -3,13 +3,13 @@
   <body>
     <script>
       const ul = document.createElement("ul");
-      let content = prompt("Enter the text for the list item");
+      let content = prompt("Enter the text for the list item", "");
 
       while (content) {
         const li = document.createElement("li");
         li.textContent = content;
         ul.append(li);
-        content = prompt("Enter the text for the list item");
+        content = prompt("Enter the text for the list item", "");
       }
 
       document.body.append(ul);
